# SuperServe

./: .gitignore  Cargo.toml  LICENSE  NOTICES  README.md  serve_opt.json
src/: config.rs  main.rs  redirect.rs  security.rs  serve.rs  setssl.rs  template.rs
static/: 404.html  about.html  index.html
