[package]
name = "super_serve"
version = "0.1.0"
authors = ["normanade"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3"
env_logger = "0.7"

rustls = "0.18"
actix-web = { version = "3", features = ["rustls"] }
actix-files = "0.4"
actix-service = "1.0"
actix-multipart = "0.3"
uuid = { version = "0.8", features = ["v4"] }
sanitize-filename = "0.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.58"

handlebars = "3.5.0"

[profile.release]
lto = true
